# Research-Assignment

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  ROS2_IMPLEMENTATION_PLAN.md  START_HERE.md  USAGE_GUIDE.md  quick_start.sh
matlab/: FILE_MANIFEST.md  HOW_TO_CHECK.txt  MATLAB_CHECKLIST.md  README.md  diagnose_mpc.m  main_simulation.m  run_comprehensive_tests.m  run_simulation.m  run_simulation_interactive.m  test_estimators.m  test_new_utilities.m  test_phase1.m  test_phase2_part1.m  test_phase2_part2.m  test_phase2_part3.m  test_phase3_part1.m  test_phase3_part2.m  test_phase3_part3.m  test_phase4.m  view_results.m
matlab/controllers/: LQRController.m  (+2 more)
results/: AStar_LQR_CBF1_EKF_config.txt  AStar_LQR_CBF1_EKF_metrics.csv  AStar_LQR_CBF1_EKF_trajectory.csv
ros2_ws/: PHASE1_COMPLETE.md  TESTING_GUIDE.md
ros2_ws/src/vehicle_nav/: FILE_MANIFEST.md  LICENSE  QUICK_REFERENCE.md  README.md  TOPIC_ARCHITECTURE.md  package.xml  setup.cfg  setup.py
ros2_ws/src/vehicle_nav/config/: params.yaml  vehicle_nav.rviz
ros2_ws/src/vehicle_nav/launch/: sim_launch.py  turtle_launch.py
ros2_ws/src/vehicle_nav/scripts/: analyze_results.py  run_tests.sh
ros2_ws/src/vehicle_nav/vehicle_nav/: astar_node.py  cbf_node.py  goal_publisher.py  lqr_node.py  metrics_node.py  mpc_node.py  pid_node.py  rrtstar_node.py  simulator_node.py  turtlesim_bridge.py
simulation_result_interpretation/: CBF_SAFETY_REPORT.md  CONTROLLER_REPORT.md  README.md  cbf_safety_plots.py  controller_performance_plots.py  example_trajectories.py  planning_performance_plots.py
(+70 files in other folders)
